Use shared counter only for initialization.

Fixes equality comparison for anonymous QML data layers (where nameId
is unspecified) needed to have more than one QML data layer displayed
at once.

BUG: 317719
FIXED-IN: KDE-4.10.3/Marble-1.5.3
(cherry picked from commit 801e4c7dab0ec0d832c1bb4c3311236583f65f25)